# samson-vision

./: .cursorrules  .gitignore  ARCHITECTURE.md  BENCHMARK_v0.4.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SAMSON_VISION_ARCHITECTURE.md  index.html  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
Material_Adicional_entonces-no-entrenar-como-le-ense/outputs/samson_vision_runtime/: NOUS_AGENT_BLUEPRINT.md  README.md  RUNBOOK.md
Material_Adicional_entonces-no-entrenar-como-le-ense/outputs/samson_vision_runtime/config/: samson_vision.config.json
Material_Adicional_entonces-no-entrenar-como-le-ense/outputs/samson_vision_runtime/knowledge/: 00_CORE_RULES.md  01_OUTPUT_SCHEMA.md  02_COLOR_LEXICON.md  04_LAYOUT_PATTERNS.md  (+10 more)
PUBLIC/: INDEX.md  README.md
PUBLIC/docs/: ARCHITECTURE.md  BENCHMARK.md  COSTS.md  INTEGRATIONS.md  SAMSON_VISION_PACK.md  SETUP.md  generate_use_cases_pdf.py
assets/: README.md
docs/: COSTS.md
examples/: README.md
examples/dashboard/: README.md  output.svp.md
examples/document_ocr/: README.md  output.svp.md
examples/mobile_ui/: README.md  output.svp.md
examples/terminal_error/: README.md  output.svp.md
examples/web_ui_screenshot/: README.md  output.svp.md
input/: .gitkeep
runtime/: ADAPTER_INTERFACE.md  README.md  RUNBOOK.md  deepseek_prompt.generated.md  prompt_web_agent_action.generated.md  rag_index.jsonl
runtime/examples/good/: excel_sales_table_pack.md  generic_photo_scene_pack.md  gui_error_dialog_pack.md  web_google_home_pack.md
runtime/harness/: deepseek_text_only_harness.md  samson_vision_harness.md
runtime/knowledge/: 03_SHAPES_AND_SYMBOLS.md  05_WEB_PATTERNS.md  12_GOOD_EXAMPLES.md
runtime/prompts/: samson_external_ai_prompt.md
runtime/schemas/: samson_vision_pack.schema.json
runtime/scripts/: smoke_test.py  validate_pack.py
runtime/subagents/: rag_retriever.md  text_reasoner.md
src/: __init__.py  device_db.py  harnesses.py  runtime_integration.py  samson_core.py  samson_vision.py  synesthesia.py  versiculos.py
src/vmk/: __init__.py  kernel.py  scene_graph.py
test/: run_tests.py  test_integration.py
(+17 files in other folders)
