[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samson-vision"
version = "2.0"
description = "Lenguaje visual textual que permite a IAs sin vision 'ver' imagenes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]
optional-dependencies = { dev = [
    "opencv-python-headless>=4.8.0",
    "pytesseract>=0.3.10",
] }
scripts = { "samson-vision" = "samson_vision:cli" }

[tool.setuptools.packages.find]
where = ["src"]
