[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samson-vision"
version = "2.0"
description = "Samson Vision — revelar el plan oculto bajo los pixeles. SVP: 13 campos de texto para que IAs sin vision vean imagenes sin modelos costosos."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]
optional-dependencies = { dev = [
    "opencv-python-headless>=4.8.0",
    "pytesseract>=0.3.10",
] }
scripts = { "samson-vision" = "samson_vision:cli" }

[tool.setuptools.packages.find]
where = ["src"]
