[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samson-vision"
version = "0.3.3"
description = "Visual-to-text bridge for AI agents: structured SVP packs for screenshots, documents, UI images and text-only LLM workflows."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]
optional-dependencies = { dev = [
    "opencv-python-headless>=4.8.0",
    "pytesseract>=0.3.10",
] }
scripts = { "samson-vision" = "samson_vision:cli" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["samson_vision", "samson_core", "harnesses", "device_db", "runtime_integration", "synesthesia", "versiculos"]
